WIP auto debate creation
